sorting spacing issues on eventCard

--- a/front-end/src/Components/EventCard/eventCard.css
+++ b/front-end/src/Components/EventCard/eventCard.css
@@ -150,7 +150,7 @@
     gap: 1em;
   }
   .event-card-container {
-    padding: 0.5em;
+    padding: 0.5em 0em;
   }
   .event-confirmation-container {
     display: flex;
@@ -172,6 +172,6 @@
 
 @media screen and (min-width: 950px) {
   .event-card-container {
-    padding: 1em;
+    padding: 1em 0em;
   }
 }
